--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -46,6 +46,11 @@
   --theme-success-background: var(--base0C);
   --theme-warning-background: var(--base09);
   --theme-error-background: var(--base08);
+  --theme-scrollbar-background: transparent;
+  --theme-scrollbar-blur-thumb-rest: transparent;
+  --theme-scrollbar-blur-thumb-hover: transparent;
+  --theme-scrollbar-focus-thumb-rest: var(--base01);
+  --theme-scrollbar-focus-thumb-hover: var(--base03);
 }
 
 body {
@@ -62,36 +67,34 @@ a {
 }
 
 ::-webkit-scrollbar {
-  --track-color: transparent;
-  --thumb-color-rest: transparent;
-  --thumb-color-hover: transparent;
   width: 16px;
   height: 16px;
-  background-color: var(--track-color);
+  background-color: var(--theme-scrollbar-background);
 }
 
 ::-webkit-scrollbar-thumb {
-  --track-color: transparent;
   border-radius: 8px;
   width: 8px;
   height: 8px;
-  border: 4px solid var(--track-color);
+  border: 4px solid var(--theme-scrollbar-background);
   background-clip: padding-box;
 
-  background-color: var(--thumb-color-rest);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--thumb-color-hover);
-}
-
-::-webkit-scrollbar-corner {
-  background-color: var(--track-color);
+  background-color: var(--theme-scrollbar-blur-thumb-rest);
 }
 
 :focus-within::-webkit-scrollbar-thumb {
-  --thumb-color-rest: var(--base01);
-  --thumb-color-hover: var(--base03);
+  --thumb-color-rest: var(--theme-scrollbar-focus-thumb-rest);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--theme-scrollbar-blur-thumb-hover);
+}
+:focus-within::-webkit-scrollbar-thumb {
+  background-color: var(--theme-scrollbar-focus-thumb-hover);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: var(--theme-scrollbar-background);
 }
 
 /* COMPONENTS */
